--- a/SeleniumFramework/src/main/java/com/crm/qa/config/config.properties
+++ b/SeleniumFramework/src/main/java/com/crm/qa/config/config.properties
@@ -1,6 +1,6 @@
 url = https://www.freecrm.com
 
-username = naveenk
-password = test@123
+username = testcrest	
+password = crest123
 
 browser = chrome
